# enjomitch-orbiter

./: .hgignore  MFDs.sln  MFDs2013.sln  README  UpgradeLog.htm  orbiter.workspace  orbiterroot.vsprops
lib/: CMakeLists.txt  EnjoLib.sln  EnjoLib.vcproj  proj.cbp
lib/ML/: CrossValidation.cpp  CrossValidation.hpp
lib/Math/: AxisRescale.cpp  BinSearchArg.cpp  BinSearchArg.hpp  BinSearchArgSubject.cpp  BinSearchArgSubject.hpp  BinSearchOpti.cpp  BinSearchOpti.hpp  BinSearchOpti2D.cpp  BinSearchOpti2D.hpp  BinSearchOpti2DSubject.hpp  BinSearchOptiSubject.cpp  BinSearchOptiSubject.hpp  Bisection.cpp  Bisection.hpp  BisectionSubject.cpp  BisectionSubject.hpp  BoundSearch.cpp  BoundSearch.hpp  Colors.cpp  Colors.hpp  GeneralMath.cpp  GeneralMath.hpp  GreatCircleAdvMath.hpp  MaxMinFind.hpp  MaxMinFindAll.hpp  PerlinNoise.hpp  RandomMath.cpp  SafeNumber.hpp  SpaceMathBody.cpp  SplineLin.cpp  SplineLin.hpp
lib/Orbiter/: AutopilotRotation.cpp  AutopilotRotation.hpp  BurnTime.cpp  Engine.cpp  SketchpadDummy.cpp  SketchpadDummy.h  SpaceMathOrbiter.cpp  SpaceMathOrbiter.hpp  SystemsConverterOrbiter.cpp  SystemsConverterOrbiter.hpp  VesselCapabilities.cpp
lib/PID/: DerivatorDiscrete.cpp  IntegratorDiscrete.cpp  PID.cpp  PID.hpp
lib/Statistical/: Assertions.cpp  Assertions.hpp  Autocorrelation.cpp  Autocorrelation.hpp  Centroid.cpp  Centroid.hpp  Correlation.cpp  Correlation.hpp  EigenAbstract.cpp  EigenAbstract.hpp  EigenFactoryAbstract.hpp  EigenNewmat10.cpp  EigenNewmat10.hpp  EigenValueComparator.cpp  EigenValueComparator.hpp  EigenValueVector.cpp  EigenValueVector.hpp  KMeans1d.cpp  KMeans1d.hpp  KMeans1dCluster.cpp  KMeans1dCluster.hpp  LossFunctions.cpp  LossFunctions.hpp  Matrix.cpp  Matrix.hpp  MeanWeighted.hpp  PCA.cpp  PCA.hpp  PCAAuto.cpp  ScalingOpStandardize.cpp  ScalingOpStandardize.hpp  Statistical.cpp  Statistical.hpp  Vector.cpp  Vector.hpp  VectorD.cpp  VectorD.hpp  VectorF.cpp  VectorF.hpp  VectorTpl.cpp  (+1 more)
lib/Systems/: Geo.cpp  Point.cpp
lib/Template/: LoopThreadedTpl.cpp  LoopThreadedTpl.hpp  PtrHelper.cpp  PtrHelper.hpp  SharedPtr.hpp  UniquePtr.hpp  ValArray.hpp
lib/Util/: AlgoSTD.cpp  AlgoSTD.hpp  Bimap.hpp  CStr.hpp  CharManipulations.cpp  CharManipulations.hpp  ConcurrentQueueTpl.hpp  CoutBuf.cpp  CoutBuf.hpp  EnumStringMap.cpp  EnumStringMap.hpp  FileUtils.cpp  FileUtils.hpp  HtmlGen.cpp  HtmlGen.hpp  Ifstream.cpp  Ifstream.hpp  LinuxNetwork.cpp  LinuxNetwork.hpp  LinuxTools.cpp  LinuxTools.hpp  LoopThreaded.cpp  LoopThreaded.hpp  Ofstream.cpp  Ofstream.hpp  Result.hpp  (+18 more)
libwx/: CMakeLists.txt  ConfigSavesWindow.cpp  ImageManipulation.cpp  MyChoiceEnum.cpp  MyChoiceEnum.h  MyListCtrlCheckbox.cpp  MyListCtrlCheckbox.h  MyWxScrolledWindow.cpp  proj.cbp  proj.cbp.save
(+805 files in other folders)
